--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack starter</title>
+    <title>Calendar</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -16,14 +16,9 @@
         </div>
     </header>
 
-    <section class="calendar">
-        <div class="container">
-            <div class="calendar__select-box">
-
-            </div>
-            <div class="calendar__table"></div>
-        </div>
-    </section>
+    <div class="container">
+        <div id="calendar" class="calendar"></div>
+    </div>
 
 <script src="bundle.js" defer></script>
 </body>
